DV-83 feat: 유저 데이터 필드 이름 및 값 수정
